# ai2-meals

./: .gitignore  README.md  ingest_meals.py  meal_to_md.py  pyproject.toml
analysis/: extract_mains.py  meat_transition_matrix.py  visualize_mains.py
csv/: mains.csv  meat_transitions.csv
data/: 01-05.md  01-06.md  01-07.md  01-08.md  01-09.md  01-12.md  01-13.md  01-14.md  01-15.md  01-16.md  01-21.md  01-22.md  01-23.md  01-26.md  01-27.md  01-28.md  01-29.md  01-30.md  02-02.md  02-03.md  02-04.md  02-06.md  02-09.md  02-10.md  02-11.md  02-12.md  02-13.md  02-17.md  02-18.md  02-19.md  02-23.md  02-24.md  02-25.md  02-26.md  02-27.md  03-02.md  03-03.md  03-04.md  03-05.md  03-06.md  (+21 more)
raw/: 01-05.html  01-06.html  01-07.html  01-08.html  01-09.html  01-12.html  01-13.html  01-14.html  01-15.html  01-16.html  01-21.html  01-22.html  01-23.html  01-26.html  01-27.html  01-28.html  01-29.html  01-30.html  02-02.html  02-03.html  02-04.html  02-06.html  02-09.html  02-10.html  02-11.html  02-12.html  02-13.html  02-17.html  02-18.html  02-19.html  02-23.html  02-24.html  02-25.html  02-26.html  02-27.html  03-02.html  03-03.html  03-04.html  03-05.html  03-06.html  (+21 more)
